<?xml version="1.0" encoding="utf-8"?>
<!-- Width License Plate = 397, Width table = 198.5 -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <!-- Background -->
    <include
        layout="@layout/background"/>

    <include
        layout="@layout/navigation_bar"/>

    <!--Payment Options-->
    <ImageView
        android:id="@+id/ellipse_glow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="-70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:srcCompat="@drawable/green_glow"
        android:contentDescription="Green Glow"/>

    <TextView
        android:id="@+id/payment_failed_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/exo_medium"
        android:text= "@string/thank_you"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/payment_successful"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/payment_successful"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/exo_medium"
        android:text="@string/payment_successful"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/receipt_options"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <TextView
        android:id="@+id/receipt_options_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/exo_medium"
        android:text="@string/select_receipt_option"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/receipt_options"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <GridLayout
        android:id="@+id/receipt_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/payment_failed_text"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:columnCount="2"
        android:rowCount="2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- QR Code Option -->
        <LinearLayout
            android:id="@+id/qr_code_option"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@drawable/components_payment_options_button"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:paddingVertical="20dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/components_qr_code"
                android:contentDescription="@string/qr_code_option" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qr_code_option"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:fontFamily="@font/exo_bold"
                android:textSize="22sp"/>
        </LinearLayout>

        <!--Email Option-->
        <LinearLayout
            android:id="@+id/email_option"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@drawable/components_payment_options_button"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_margin="5dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/components_email"
                android:contentDescription="@string/email_option"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_option"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:fontFamily="@font/exo_bold"
                android:textSize="22sp"/>
        </LinearLayout>

        <!--SMS Option-->
        <LinearLayout
            android:id="@+id/insert_option"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@drawable/components_payment_options_button"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_margin="5dp"
            android:paddingVertical="20dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="5dp"
                android:src="@drawable/components_message_icon"
                android:contentDescription="@string/message_option"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_option"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:fontFamily="@font/exo_bold"
                android:textSize="22sp"/>
        </LinearLayout>

        <!--No receipt Option-->
        <LinearLayout
            android:id="@+id/tap_option"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@drawable/components_payment_options_button"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_receipt"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:fontFamily="@font/exo_bold"
                android:textSize="22sp"/>
        </LinearLayout>
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
